# registro-lol-data-rankeds

./: .gitignore  main.py  pyproject.toml
notebooks/: register_data_lol_games.ipynb
src/: data_preparation.py  extract_data_api.py  spreadsheet_operations.py  utils.py
src/config/: settings.py
