[project]
name = "registro-lol-data-rankeds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gspread>=6.2.1",
    "loguru>=0.7.3",
    "oauth2client>=4.1.3",
    "pandas>=3.0.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pytz>=2026.2",
    "riotwatcher>=3.3.1",
]
